--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,15 @@
-<div >
-  <nav class="navbar navbar-expand-md navbar-dark sticky-top px-4 custom_navbar bg-light">
-    <img src="/images/1630588948599.jpeg" alt="" class="h-100  " style="width: 170px;" routerLink="">
-    <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
-      >
-    </a>
+<div>
+  <nav
+    class="navbar navbar-expand-md navbar-dark sticky-top px-4 custom_navbar"
+  >
+    <img
+      src="/images/1630588948599.jpeg"
+      alt=""
+      class="h-100"
+      style="width: 170px"
+      routerLink=""
+    />
+    <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"> </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -12,8 +18,7 @@
       aria-controls="navbarNav"
       aria-expanded="false"
       aria-label="Toggle navigation"
-      style="color: blue;"
-      
+      style="color: blue"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -57,5 +62,3 @@
   </nav>
   <router-outlet></router-outlet>
 </div>
-
-
