--- a/src/app/sp-dashboard/sp-dashboard.component.html
+++ b/src/app/sp-dashboard/sp-dashboard.component.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-md bg-white sticky-top navbar-dark px-4 custom_navbar">
-  <a class="navbar-brand text-dark company_name fw-bold " routerLink="/"
-    >VITA <small style="font-size: 30px;">OMS</small></a
+<nav
+  class="navbar navbar-expand-md bg-white sticky-top navbar-dark px-4 custom_navbar"
+>
+  <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
+    >VITA <small style="font-size: 30px">OMS</small></a
   >
   <button
     class="navbar-toggler"
@@ -10,20 +12,22 @@
     aria-controls="navbarNav"
     aria-expanded="false"
     aria-label="Toggle navigation"
-    
   >
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
+      <li class="nav-item">
         <a
           class="nav-link text-dark"
           routerLink="sa-profile"
           routerLinkActive="active"
-          ><i class="bi bi-person-circle" style="font-size: 30px; font-weight: bolder;  "></i></a
-        >
+          ><i
+            class="bi bi-person-circle"
+            style="font-size: 30px; font-weight: bolder"
+          ></i
+        ></a>
       </li>
       <li class="nav-item">
         <a
@@ -31,15 +35,18 @@
           routerLink="/"
           routerLinkActive="active"
           (click)="logout()"
-          ><i class="bi bi-box-arrow-right" style="font-size: 30px; font-weight: bolder; "></i></a
-        >
+          ><i
+            class="bi bi-box-arrow-right"
+            style="font-size: 30px; font-weight: bolder"
+          ></i
+        ></a>
       </li>
     </ul>
   </div>
 </nav>
 <div class="row back">
   <div class="col-sm-2">
-    <div class="card card1  mt-1 border-0 vh-100">
+    <div class="card card1 mt-1 border-0 vh-100">
       <div class="card-header">
         <h2>Works!</h2>
       </div>
@@ -51,7 +58,9 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link text-dark" routerLink="viewadmin"><b>View Admin</b></a>
+            <a class="nav-link text-dark" routerLink="viewadmin"
+              ><b>View Admin</b></a
+            >
           </li>
         </ul>
       </div>
