--- a/src/app/teamlead/teamlead.component.html
+++ b/src/app/teamlead/teamlead.component.html
@@ -11,7 +11,9 @@
           <div class="card-body">
             <div class="row">
               <div>
-                <label for="" class="form-label text-dark"><b>Task Name</b></label>
+                <label for="" class="form-label text-dark"
+                  ><b>Task Name</b></label
+                >
                 <input
                   type="text"
                   name=""
@@ -20,7 +22,9 @@
                 />
               </div>
               <div>
-                <label for="" class="form-label text-dark"><b>Task Description</b></label>
+                <label for="" class="form-label text-dark"
+                  ><b>Task Description</b></label
+                >
                 <input
                   type="text"
                   name=""
@@ -29,7 +33,9 @@
                 />
               </div>
               <div>
-                <label for="" class="form-label text-dark"><b>Task Duration</b></label>
+                <label for="" class="form-label text-dark"
+                  ><b>Task Duration</b></label
+                >
                 <input
                   type="text"
                   name=""
@@ -37,7 +43,7 @@
                   formControlName="task_duration"
                 />
               </div>
-              
+
               <div class="text-center">
                 <button
                   class="btn btn-success text-dark btn w-50 p-2 mt-4"
