--- a/src/app/tl-profile/tl-profile.component.html
+++ b/src/app/tl-profile/tl-profile.component.html
@@ -3,13 +3,13 @@
     <div class="col-md-10">
       <div class="card shadow">
         <form [formGroup]="profileForm">
-          <div class="card-header  text-dark text-center">
+          <div class="card-header text-dark text-center">
             <h2 class="mt-1"><b>Team Lead Profile</b></h2>
           </div>
           <div class="card-body">
             <div class="row">
               <div class="col-sm-4 mt-5">
-                <img src="/images/sir3.png" alt="">
+                <img src="/images/sir3.png" alt="" />
               </div>
               <div class="col-sm-8">
                 <div class="mb-3">
@@ -74,9 +74,9 @@
       <div class="modal-body">
         <div class="card">
           <form [formGroup]="editForm">
-            <div class="card-header ">
+            <div class="card-header">
               <div class="row">
-                <h1 class="text-center text-dark h-25 ">Team lead Details</h1>
+                <h1 class="text-center text-dark h-25">Team lead Details</h1>
               </div>
             </div>
             <div class="card-body">
