--- a/src/app/adminlogin/adminlogin.component.html
+++ b/src/app/adminlogin/adminlogin.component.html
@@ -13,7 +13,9 @@
             <div class="card-body">
               <div class="row">
                 <div>
-                  <label for="" class="form-label text-dark"><b>Admin_Mail</b></label>
+                  <label for="" class="form-label text-dark"
+                    ><b>Admin_Mail</b></label
+                  >
                   <input
                     type="text"
                     name=""
