--- a/src/app/teamlead-dashboard/teamlead-dashboard.component.html
+++ b/src/app/teamlead-dashboard/teamlead-dashboard.component.html
@@ -1,7 +1,8 @@
-
-<nav class="navbar navbar-expand-md bg-white sticky-top navbar-dark px-4 custom_navbar bg-light">
+<nav
+  class="navbar navbar-expand-md bg-white sticky-top navbar-dark px-4 custom_navbar bg-light"
+>
   <a class="navbar-brand text-dark company_name fw-bold" routerLink="/"
-    >VITA <small style="font-size: 30px;">OMS</small></a
+    >VITA <small style="font-size: 30px">OMS</small></a
   >
   <button
     class="navbar-toggler"
@@ -15,15 +16,18 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse " id="navbarNav">
-    <ul class="navbar-nav ms-auto ">
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ms-auto">
       <li class="nav-item">
         <a
           class="nav-link text-dark"
           routerLink="tl-profile"
           routerLinkActive="active"
-          ><i class="bi bi-person-circle" style="font-size: 30px; font-weight: bolder; "></i></a
-        >
+          ><i
+            class="bi bi-person-circle"
+            style="font-size: 30px; font-weight: bolder"
+          ></i
+        ></a>
       </li>
       <li class="nav-item">
         <a
@@ -31,37 +35,46 @@
           routerLink="/"
           routerLinkActive="active"
           (click)="logout()"
-          ><i class="bi bi-box-arrow-right" style="font-size: 30px; font-weight: bolder; "></i></a
-        >
+          ><i
+            class="bi bi-box-arrow-right"
+            style="font-size: 30px; font-weight: bolder"
+          ></i
+        ></a>
       </li>
     </ul>
   </div>
 </nav>
 <div class="row back">
-  <div class="col-sm-2 ">
-    <div class="card card1  mt-1 border-0 vh-100">
-        <div class="card-header">
-            <h2>Works!</h2>
-        </div>
-        <div class="display-flex p-2">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="employeeregister"><b>Add Employee</b></a>
+  <div class="col-sm-2">
+    <div class="card card1 mt-1 border-0 vh-100">
+      <div class="card-header">
+        <h2>Works!</h2>
+      </div>
+      <div class="display-flex p-2">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-dark" routerLink="employeeregister"
+              ><b>Add Employee</b></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark" routerLink="teamlead"
+              ><b>Add Task</b></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-dark" routerLink="viewemployee"
+              ><b>View Employee</b></a
+            >
+          </li>
 
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="teamlead"><b>Add Task</b></a>
-
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="viewemployee"><b>View Employee</b></a>
-                </li>
-                
-                <li class="nav-item">
-                    <a class="nav-link text-dark" routerLink="edittask"><b>View Task</b></a>
-                </li>
-            </ul>
-        </div>
+          <li class="nav-item">
+            <a class="nav-link text-dark" routerLink="edittask"
+              ><b>View Task</b></a
+            >
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
   <div class="col-sm-10">
