--- a/src/app/teamleadregister/teamleadregister.component.html
+++ b/src/app/teamleadregister/teamleadregister.component.html
@@ -1,17 +1,21 @@
-<div class="container-fluid  mt-2 ">
+<div class="container-fluid mt-2">
   <div class="row">
     <div class="col-sm-6 m-auto">
       <div class="card">
         <form [formGroup]="tlregisterForm">
-          <div class="card-header ">
+          <div class="card-header">
             <div class="row">
-              <h1 class="text-center text-danger mt-2"><b>TeamLead Register</b></h1>
+              <h1 class="text-center text-danger mt-2">
+                <b>TeamLead Register</b>
+              </h1>
             </div>
           </div>
           <div class="card-body">
             <div class="row">
               <div>
-                <label for="" class="form-label text-dark"><b>TL_Name</b></label>
+                <label for="" class="form-label text-dark"
+                  ><b>TL_Name</b></label
+                >
                 <input
                   type="text"
                   name=""
@@ -23,7 +27,8 @@
                   *ngIf="
                     tlregisterForm.get('TL_Name')?.invalid &&
                     tlregisterForm.get('TL_Name')?.touched
-                  " style="color: red;"
+                  "
+                  style="color: red"
                 >
                   <small
                     *ngIf="tlregisterForm.get('TL_Name')?.errors?.['required']"
@@ -36,7 +41,9 @@
                 </div>
               </div>
               <div>
-                <label for="" class="form-label text-dark"> <b>TL_Mail</b></label>
+                <label for="" class="form-label text-dark">
+                  <b>TL_Mail</b></label
+                >
                 <input
                   type="text"
                   name=""
@@ -47,7 +54,8 @@
                   *ngIf="
                     tlregisterForm.get('TL_Mail')?.invalid &&
                     tlregisterForm.get('TL_Mail')?.touched
-                  "style="color: red;"
+                  "
+                  style="color: red"
                 >
                   <small
                     *ngIf="tlregisterForm.get('TL_Mail')?.errors?.['required']"
@@ -72,7 +80,8 @@
                   *ngIf="
                     tlregisterForm.get('TL_Id')?.invalid &&
                     tlregisterForm.get('TL_Id')?.touched
-                  "style="color: red;"
+                  "
+                  style="color: red"
                 >
                   <small
                     *ngIf="tlregisterForm.get('TL_Id')?.errors?.['required']"
@@ -83,11 +92,11 @@
                     >Id atleast 3 digits</small
                   >
                 </div>
-
-
               </div>
               <div>
-                <label for="" class="form-label text-dark"><b>TL_Mobile_Number</b></label>
+                <label for="" class="form-label text-dark"
+                  ><b>TL_Mobile_Number</b></label
+                >
                 <input
                   type="text"
                   name=""
@@ -98,7 +107,8 @@
                   *ngIf="
                     tlregisterForm.get('TL_Mobile_Number')?.invalid &&
                     tlregisterForm.get('TL_Mobile_Number')?.touched
-                  "style="color: red;"
+                  "
+                  style="color: red"
                 >
                   <small
                     *ngIf="tlregisterForm.get('TL_Mobile_Number')?.errors?.['required']"
@@ -106,18 +116,19 @@
                   >
                   <small
                     *ngIf="tlregisterForm.get('TL_Mobile_Number')?.errors?.['minlength']"
-                    > Enter valid 10 digits Mobile number</small
+                  >
+                    Enter valid 10 digits Mobile number</small
                   >
                   <small
                     *ngIf="tlregisterForm.get('TL_Mobile_Number')?.errors?.['maxlength']"
                     >Password atleast 10 digits</small
                   >
                 </div>
-
-
               </div>
               <div>
-                <label for="" class="form-label text-dark"><b>TL_Password</b></label>
+                <label for="" class="form-label text-dark"
+                  ><b>TL_Password</b></label
+                >
                 <input
                   type="text"
                   name=""
@@ -128,7 +139,8 @@
                   *ngIf="
                     tlregisterForm.get('TL_Password')?.invalid &&
                     tlregisterForm.get('TL_Password')?.touched
-                  "style="color: red;"
+                  "
+                  style="color: red"
                 >
                   <small
                     *ngIf="tlregisterForm.get('TL_Password')?.errors?.['required']"
@@ -141,12 +153,12 @@
                 </div>
               </div>
 
-              <div class="text-center ">
+              <div class="text-center">
                 <button
                   class="btn btn-success text-dark btn w-50 p-2 mt-4"
                   (click)="register()"
                 >
-                 <b> Register</b>
+                  <b> Register</b>
                 </button>
               </div>
             </div>
