--- a/src/app/viewemployee/viewemployee.component.html
+++ b/src/app/viewemployee/viewemployee.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="col-sm-12">
   <div class="container mt-4">
     <h3 class="mb-3 text-primary">#Employee List</h3>
@@ -24,7 +22,7 @@
             <td>{{ employee.emp_id }}</td>
             <td>{{ employee.emp_mail }}</td>
             <td>{{ employee.emp_number }}</td>
-            
+
             <td class="d-flex btn-group">
               <button
                 class="btn btn-info"
@@ -34,11 +32,13 @@
               >
                 <i class="bi bi-pencil-square"></i>
               </button>
-              
-              <button class="btn btn-danger" (click)="deleteEmployee(employee._id)">
+
+              <button
+                class="btn btn-danger"
+                (click)="deleteEmployee(employee._id)"
+              >
                 <i class="bi bi-trash3"></i>
               </button>
-              
             </td>
           </tr>
         </tbody>
@@ -56,7 +56,9 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="myEmptyModalLabel">Edit Employee Details</h5>
+        <h5 class="modal-title" id="myEmptyModalLabel">
+          Edit Employee Details
+        </h5>
         <button
           type="button"
           class="btn-close"
@@ -84,8 +86,7 @@
                     formControlName="emp_name"
                   />
                 </div>
-                
-                
+
                 <div>
                   <label for="" class="form-label">Employee_Id</label>
                   <input
@@ -113,7 +114,7 @@
                     formControlName="emp_number"
                   />
                 </div>
-                 
+
                 <div class="text-center">
                   <button
                     class="btn btn-success btn w-50 p-2 mt-4"
