--- a/src/app/viewteamlead/viewteamlead.component.html
+++ b/src/app/viewteamlead/viewteamlead.component.html
@@ -1,4 +1,3 @@
-
 <div class="col-sm-12">
   <div class="container mt-4">
     <h3 class="mb-3 text-primary">#Teamlead List</h3>
@@ -13,7 +12,7 @@
             <th>Email</th>
             <th>ID</th>
             <th>Number</th>
-            
+
             <th>Actions</th>
           </tr>
         </thead>
@@ -24,7 +23,7 @@
             <td>{{ teamlead.TL_Mail }}</td>
             <td>{{ teamlead.TL_Id }}</td>
             <td>{{ teamlead.TL_Mobile_Number }}</td>
-            
+
             <td class="d-flex btn-group">
               <button
                 class="btn btn-info"
@@ -32,13 +31,12 @@
                 data-bs-target="#myEmptyModal"
                 (click)="editTl(teamlead)"
               >
-             <i class="bi bi-pencil-square"></i>
+                <i class="bi bi-pencil-square"></i>
               </button>
-              
+
               <button class="btn btn-danger" (click)="deleteTl(teamlead._id)">
-               <i class="bi bi-trash3"></i>
+                <i class="bi bi-trash3"></i>
               </button>
-              
             </td>
           </tr>
         </tbody>
@@ -56,7 +54,9 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="myEmptyModalLabel">Edit Teamlead Details</h5>
+        <h5 class="modal-title" id="myEmptyModalLabel">
+          Edit Teamlead Details
+        </h5>
         <button
           type="button"
           class="btn-close"
@@ -93,7 +93,7 @@
                     formControlName="TL_Mail"
                   />
                 </div>
-                
+
                 <div>
                   <label for="" class="form-label">TL_Id</label>
                   <input
