--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -24,21 +24,23 @@
           routerLinkActive="active"
           ><i
             class="bi bi-person-circle"
-            style="font-size: 30px; font-weight: bolder"
+            style="font-size: 40px; font-weight: bolder"
           ></i
-        ></a>
+        >
+      <span class="nav-text d-inline d-lg-none ms-2">Profile</span></a>
       </li>
       <li class="nav-item">
         <a
-          class="nav-link text-dark"
+          class="nav-link text-dark ms-2"
           routerLink="/"
           routerLinkActive="active"
           (click)="logout()"
           ><i
             class="bi bi-box-arrow-right"
-            style="font-size: 30px; font-weight: bolder"
+            style="font-size: 40px; font-weight: bolder"
           ></i
-        ></a>
+        > <span class=" nav-text d-inline d-lg-none ms-2">Logout</span>
+      </a>
       </li>
     </ul>
   </div>
