--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -2,9 +2,9 @@
   <div class="row">
     <h1 class="mt-3">Welcome to <u>VITA OMS</u></h1>
   </div>
-  <div class="row mt-5 justify-content-around">
+  <div class="row mt-5 justify-content-around " >
     <div class="col-sm-4">
-      <div class="row">
+      <div class="row mt-4">
         <h2 class="text-dark"><b>Who We Are?</b></h2>
       </div>
       <div class="row">
@@ -21,7 +21,7 @@
     </div>
 
     <div class="col-sm-4">
-      <div class="row">
+      <div class="row mt-4">
         <h2 class="text-dark"><b>What We Do?</b></h2>
       </div>
 
